<resources>
    <string name="app_name">MeetsMe</string>
    <string name="tagline">Make your networking easier with us!</string>
    <string name="prompt_signup">Don\'t have an account? Sign up for free!</string>
    <string name="tagline_signup">Want to find people who matches your interest? \n Join
        Now!</string>
    <string name="prompt_login">Already have account? Sign In</string>
    <string name="terms_cond">By clicking the button below, you agree with our Terms and
        Conditions</string>
    <string name="header_create_prof">You\'re almost there!</string>
    <string name="subheader_create_prof">Please fill the form to proceed and start using
        this application</string>
    <string name="select_interest">If more than one, separate it with commas</string>
    <string name="main_activity_slogan">Tap the logo to find people around you!</string>
    <string name="main_activity_slogan_2">Can\'t decide by yourself? Let us decide!</string>
    <string name="main_activity_button">Match people automatically</string>
    <string name="message_notes">Notes: Your chat with another user will be deleted after one hour</string>
    <string name="edit_profile_button">Log out</string>
    <string name="result">Tap the marker for more information</string>
    <string-array name="anonymous_name">
        <item>Anonymous Cat</item>
        <item>Anonymous Turtle</item>
        <item>Anonymous Bird</item>
        <item>Anonymous Elephant</item>
        <item>Anonymous Dog</item>
        <item>Anonymous Snake</item>
        <item>Anonymous Fox</item>
        <item>Anonymous Tiger</item>
        <item>Anonymous Bear</item>
        <item>Anonymous Crocodile</item>
        <item>Anonymous Lion</item>
        <item>Anonymous Horse</item>
        <item>Anonymous Leopard</item>
        <item>Anonymous Kitten</item>
        <item>Anonymous Puppy</item>
    </string-array>
</resources>
