<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_activity_slogan"
        android:textColor="@color/white_text"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/main_bigbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_launcher"/>

    <TextView
        style="@style/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_activity_slogan_2"
        android:textAlignment="center"/>

    <TextView
        style="@style/big_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_primary_white"
        android:text="@string/main_activity_button"/>

</LinearLayout>