<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg2"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="id.meetsme.meetsme.LandingPageActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline_signup"
            android:textAlignment="center"
            android:textColor="@color/white_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/prompt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_login"
            android:textColor="@color/white_text"/>

        <EditText
            android:id="@+id/register_name"
            style="@style/edit_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Full name"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/register_username"
            style="@style/edit_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Username"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/register_email"
            style="@style/edit_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Email"
            android:singleLine="true"

            />

        <EditText
            android:id="@+id/register_password"
            style="@style/edit_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="true"/>


        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/terms_cond"
            android:textAlignment="center"
            android:textColor="@color/white_text"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sign_up_button"
            style="@style/big_button"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary_white"
            android:text="Sign Up"
            android:textColor="@color/white_text"/>

    </LinearLayout>
</RelativeLayout>